<resources>
    <string name="app_name">Thinking</string>
    <string name="title_text">Think Think Think</string>
    <string name="grateful_text">What are you Thinking about?</string>
    <string name="get_started_text">Get Start</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Log in</string>
    <string name="or_text">or</string>
    <string name="create_account_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="post_saveButton">save</string>
    <string name="post_your_thoughtsET">Your Thoughts</string>
    <string name="post_titleET">Title</string>
    <string name="post_dateTV">What Do You Think?</string>
    <string name="post_nameTV">Alex</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="action_signout">SignOut</string>
    <string name="jList_no_thought_TV">Write a Post Entry by Clicking  +</string>
</resources>